add users tasks
