# openapi.yaml
@@ -5,6 +5,8 @@ info:
 paths:
   /tasks:
     get:
+      tags:
+        - tasks
       operationId: listTasks
       summary: List tasks
       responses:
@@ -21,7 +23,9 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
     post:
-      operationId: createTask
+      tags:
+        - tasks
+      operationId: PostTask
       summary: Create task
       requestBody:
         required: true
@@ -57,6 +61,8 @@ paths:
           type: integer
           minimum: 1
     patch:
+      tags:
+        - tasks
       operationId: patchTask
       summary: Patch task by id
       requestBody:
@@ -91,8 +97,155 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
     delete:
+      tags:
+        - tasks
       operationId: deleteTask
       summary: Delete task by id
+      responses:
+        "204":
+          description: Deleted
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /users:
+    get:
+      tags:
+        - users
+      operationId: GetUsers
+      summary: List users
+      responses:
+        "200":
+          description: Users list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ListUsersResponse"
+        "500":
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+    post:
+      tags:
+        - users
+      operationId: PostUser
+      summary: Create user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateUserRequest"
+      responses:
+        "201":
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CreateUserResponse"
+        "400":
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /users/{id}/tasks:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+          minimum: 1
+    get:
+      tags:
+        - tasks
+      operationId: GetTasksByUserID
+      summary: List tasks by user id
+      responses:
+        "200":
+          description: Tasks list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ListTasksResponse"
+        "404":
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /users/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+          minimum: 1
+    patch:
+      tags:
+        - users
+      operationId: PatchUserByID
+      summary: Patch user by id
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PatchUserRequest"
+      responses:
+        "200":
+          description: Updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PatchUserResponse"
+        "400":
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+    delete:
+      tags:
+        - users
+      operationId: DeleteUserByID
+      summary: Delete user by id
       responses:
         "204":
           description: Deleted
@@ -116,6 +269,7 @@ components:
         - id
         - task
         - is_done
+        - user_id
       properties:
         id:
           type: integer
@@ -125,16 +279,25 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: int64
+          minimum: 1
     CreateTaskRequest:
       type: object
       required:
         - task
         - is_done
+        - user_id
       properties:
         task:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: int64
+          minimum: 1
     PatchTaskRequest:
       type: object
       properties:
@@ -150,6 +313,54 @@ components:
       type: array
       items:
         $ref: "#/components/schemas/Task"
+    User:
+      type: object
+      required:
+        - id
+        - email
+        - password
+        - created_at
+        - updated_at
+      properties:
+        id:
+          type: integer
+          format: int64
+          minimum: 1
+        email:
+          type: string
+        password:
+          type: string
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+    CreateUserRequest:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+    PatchUserRequest:
+      type: object
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+    CreateUserResponse:
+      $ref: "#/components/schemas/User"
+    PatchUserResponse:
+      $ref: "#/components/schemas/User"
+    ListUsersResponse:
+      type: array
+      items:
+        $ref: "#/components/schemas/User"
     ErrorResponse:
       type: object
       required:
